--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,14 @@ services:
       - .env.mysql
     ports:
       - 3308:3306
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    networks:
+      - app-net
+
   app:
     container_name: app-aino-medical
     build:
@@ -15,8 +23,9 @@ services:
       - .env.local
     ports:
       - 3200:3000
-
+    networks:
+      - app-net
 
 networks:
   app-net:
-      name: app-net
+    name: app-net
